<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kevinwang.personal.decide.OptionsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/distance_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance_option"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/distance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distance_option"
            android:layout_centerHorizontal="true"
            android:hint="@string/distance_hint"
            android:inputType="number" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/distance_text"
            android:layout_alignBottom="@+id/distance_text"
            android:layout_toLeftOf="@+id/distance_text"
            android:layout_toStartOf="@+id/distance_text"
            android:text="<" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/distance_text"
            android:layout_alignBottom="@+id/distance_text"
            android:layout_toEndOf="@+id/distance_text"
            android:layout_toRightOf="@+id/distance_text"
            android:text="@string/distance_unit" />

        <TextView
            android:id="@+id/price_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distance_text"
            android:text="@string/price_option"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_option"
            android:layout_centerHorizontal="true"
            android:hint="@string/price_hint"
            android:inputType="number" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/price_text"
            android:layout_alignBottom="@+id/price_text"
            android:layout_toLeftOf="@+id/price_text"
            android:layout_toStartOf="@+id/price_text"
            android:text="<" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/price_text"
            android:layout_alignBottom="@+id/price_text"
            android:layout_toEndOf="@+id/price_text"
            android:layout_toRightOf="@+id/price_text"
            android:text="@string/price_unit" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="launchMapsActivity"
        android:text="@string/go" />

</RelativeLayout>
